samples/_failures_safe/1761178905_af6a39_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_606bbf4e.c: In function ‘main’:
./samples/SAFE/__tmp_606bbf4e.c:148:5: error: expected declaration or statement at end of input
  148 |     float ratio = (compressed.size * 100.0f) / input.size;
      |     ^~~~~
